--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,7 +1,7 @@
 #Copyright (c) Microsoft. All rights reserved.
 #Licensed under the MIT license. See LICENSE file in the project root for full license information.
 
-project(poc_hsm)
+project(poc_hsm_sample)
 
 set(poc_hsm_c_files
     main.c
@@ -20,12 +20,12 @@ include_directories(.)
 include_directories(${DEV_AUTH_MODULES_CLIENT_INC_FOLDER})
 include_directories(${SHARED_UTIL_INC_FOLDER})
 
-add_executable(poc_hsm ${poc_hsm_c_files} ${poc_hsm_h_files})
+add_executable(poc_hsm_sample ${poc_hsm_c_files} ${poc_hsm_h_files})
 
 if (WIN32)
-    target_link_libraries(poc_hsm $ENV{OpenSSLDir}/lib/ssleay32.lib $ENV{OpenSSLDir}/lib/libeay32.lib)
+    target_link_libraries(poc_hsm_sample $ENV{OpenSSLDir}/lib/ssleay32.lib $ENV{OpenSSLDir}/lib/libeay32.lib)
     file(COPY $ENV{OpenSSLDir}/bin/libeay32.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
     file(COPY $ENV{OpenSSLDir}/bin/ssleay32.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
 endif()
 
-target_link_libraries(poc_hsm poc_custom_hsm)
+target_link_libraries(poc_hsm_sample poc_custom_hsm)
